Switched to SQLite; updated DB context class

--- a/FirstHundredFoods/appsettings.json
+++ b/FirstHundredFoods/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FirstHundredFoodsContext": "Server=(localdb)\\mssqllocaldb;Database=FirstHundredFoods.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "FirstHundredFoodsContextSQLite": "Data Source=.\\Data\\FHFSqliteDatabase.db"
+    //"Server=(localdb)\\mssqllocaldb;Database=FirstHundredFoods.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
