--- a/FirstHundredFoods/FirstHundredFoods.csproj
+++ b/FirstHundredFoods/FirstHundredFoods.csproj
@@ -4,9 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     
     <ImplicitUsings>enable</ImplicitUsings>
+    
+    <UserSecretsId>683aefdf-e812-4781-8316-de6ddddef53c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
